[gd_scene load_steps=7 format=3 uid="uid://bjvh2607hw50r"]

[ext_resource type="Texture2D" uid="uid://dy477lfp555ur" path="res://assets/upgrade_button1.png" id="1_p4551"]
[ext_resource type="Texture2D" uid="uid://djms7cxrreidi" path="res://assets/upgrade_button2.png" id="2_pcbuf"]
[ext_resource type="Script" path="res://scripts/upgrade_button.gd" id="3_7r4c6"]
[ext_resource type="Texture2D" uid="uid://b63caaaeqmvub" path="res://assets/guy.png" id="4_ckbul"]

[sub_resource type="LabelSettings" id="LabelSettings_lcsgx"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_m3tn4"]

[node name="UpgradeButton" type="TextureButton"]
custom_minimum_size = Vector2(0, 102)
anchors_preset = -1
anchor_right = 0.203125
anchor_bottom = 0.0944444
texture_normal = ExtResource("1_p4551")
texture_pressed = ExtResource("2_pcbuf")
stretch_mode = 4
script = ExtResource("3_7r4c6")
start_price = 50
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.246154
anchor_top = 0.137255
anchor_right = 0.917949
anchor_bottom = 0.54902
text = "Text"
label_settings = SubResource("LabelSettings_lcsgx")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.0461538
anchor_top = 0.186275
anchor_right = 0.207692
anchor_bottom = 0.803922
texture = ExtResource("4_ckbul")
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.251282
anchor_top = 0.607843
anchor_right = 0.766667
anchor_bottom = 0.833333
text = "50 Dabloons"
label_settings = SubResource("LabelSettings_m3tn4")
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.79
anchor_top = 0.608
anchor_right = 0.915
anchor_bottom = 0.804
offset_left = -0.100006
offset_top = -0.0160027
offset_right = 0.149994
offset_bottom = 2.992
text = "0"
horizontal_alignment = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
